--- a/campaigns/student-reps.html
+++ b/campaigns/student-reps.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Aug 27 2020 21:16:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 12 2020 18:11:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d915073bc67b5" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -55,7 +55,7 @@ fbq('track', 'PageView');
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/BCYC-Logo-Full.png" width="204" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="Our logo" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="../index.html" class="brand w-nav-brand"><img src="../images/BCYC-Logo-Full.png" width="204" sizes="204px" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" alt="Our logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="../executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -87,7 +87,7 @@ fbq('track', 'PageView');
   <div class="section-2"><a href="https://bcyouthcouncil.typeform.com/to/O7lJOm" target="_blank" class="button w-button">Volunteer for this campaign</a><a href="https://bcyouthcouncil.typeform.com/to/frve5N" target="_blank" class="button-campaign w-button">Take our survey</a></div>
   <div class="campaign-people">
     <div class="w-layout-grid grid people-one">
-      <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_1753.JPG" alt="photo of Bodhi Mah" width="190" srcset="../images/IMG_1753-p-500.jpeg 500w, ../images/IMG_1753-p-800.jpeg 800w, ../images/IMG_1753-p-1080.jpeg 1080w, ../images/IMG_1753-p-1600.jpeg 1600w, ../images/IMG_1753-p-2000.jpeg 2000w, ../images/IMG_1753-p-2600.jpeg 2600w, ../images/IMG_1753-p-3200.jpeg 3200w, ../images/IMG_1753.JPG 3451w" sizes="190px" class="image-5">
+      <div id="w-node-ae0caa542ede-73bc67b5" data-w-id="ff622edc-2265-d0e2-2ce2-ae0caa542ede" style="opacity:0" class="person-block-region-one"><img src="../images/IMG_1753.JPG" alt="photo of Bodhi Mah" width="190" sizes="190px" srcset="../images/IMG_1753-p-500.jpeg 500w, ../images/IMG_1753-p-800.jpeg 800w, ../images/IMG_1753-p-1080.jpeg 1080w, ../images/IMG_1753-p-1600.jpeg 1600w, ../images/IMG_1753-p-2000.jpeg 2000w, ../images/IMG_1753-p-2600.jpeg 2600w, ../images/IMG_1753-p-3200.jpeg 3200w, ../images/IMG_1753.JPG 3451w" class="image-5">
         <div class="person-name">Ana Grace Rans Kolakovic</div>
         <div class="person-position">Coordinator of Student Reps</div>
         <div class="person-blurb">Ana Grace Rans Kolakovic is currently completing the International Baccalaureate program. During her time as a student representative at the Vancouver District Student Council, she learned about student trustees and the power of accurate student representation. Since then, Ana Grace has had a passion for student issues and the importance of accurate student representation. After creating the Student Reps campaign during the Summit program with Dogwood, she joined the British Columbia Youth Council (BCYC). She loves working with other passionate and hard-working youth. You can always find Ana Grace reading a good book and listening to GD.<br></div>
@@ -101,7 +101,7 @@ fbq('track', 'PageView');
     <div class="wrapper"></div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="../images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
+    <div class="wrap"><img src="../images/BCYC-Logo-Full.png" width="297" alt="Logo" sizes="(max-width: 479px) 90vw, 297px" srcset="../images/BCYC-Logo-Full-p-500.png 500w, ../images/BCYC-Logo-Full-p-800.png 800w, ../images/BCYC-Logo-Full.png 1001w" class="image-7">
       <div class="footer-list"><a href="../press.html" target="_blank" class="footer-link">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.linkedin.com/company/bc-youth-council/" target="_blank" class="footer-link">LinkedIn</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
