--- a/press.html
+++ b/press.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Aug 27 2020 21:16:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 12 2020 18:11:06 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ee3c3965baa430ac99dd1e1" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,7 @@
   <div class="hero">
     <div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner" class="nav w-nav">
       <div class="nav-inner">
-        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="204px" alt="Our logo" class="image-6"></a></div>
+        <div class="nav-logo-wrap"><a href="index.html" class="brand w-nav-brand"><img src="images/BCYC-Logo-Full.png" width="204" sizes="204px" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" alt="Our logo" class="image-6"></a></div>
         <div class="nav-menu-wrap">
           <nav role="navigation" class="nav-menu-2 w-nav-menu"><a href="https://bcyouthcouncil.ca#about" class="nav-link w-nav-link">About Us</a><a href="executives.html" class="nav-link w-nav-link">Our Executives</a>
             <div data-delay="0" data-hover="1" class="nav-dropdown w-dropdown">
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="footer">
-    <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" sizes="(max-width: 479px) 90vw, 297px" class="image-7">
+    <div class="wrap"><img src="images/BCYC-Logo-Full.png" width="297" alt="Logo" sizes="(max-width: 479px) 90vw, 297px" srcset="images/BCYC-Logo-Full-p-500.png 500w, images/BCYC-Logo-Full-p-800.png 800w, images/BCYC-Logo-Full.png 1001w" class="image-7">
       <div class="footer-list"><a href="press.html" target="_blank" aria-current="page" class="footer-link w--current">Press</a><a href="https://www.instagram.com/bcyouthcouncil/" target="_blank" class="footer-link">Instagram</a><a href="https://www.linkedin.com/company/bc-youth-council/" target="_blank" class="footer-link">LinkedIn</a><a href="https://www.facebook.com/BCYouthCouncil" target="_blank" class="footer-link">Facebook</a><a href="https://twitter.com/BCYouthCouncil" target="_blank" class="footer-link">Twitter</a><a href="https://www.tiktok.com/@bcyouthcouncil" target="_blank" class="footer-link">Tiktok</a></div>
     </div>
   </div>
