--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Oct 12 2020 18:11:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 12 2020 18:21:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ed82f329f6d9142a5bc67b6" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -33,6 +33,14 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
   <script data-ad-client="ca-pub-9165674550154218" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!--  Global site tag (gtag.js) - Google Ads: 616202061  -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-616202061"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-616202061');
+</script>
   <!--  Facebook Pixel Code  -->
   <script>
 !function(f,b,e,v,n,t,s)
