--- a/it.html
+++ b/it.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Oct 12 2020 18:11:06 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 12 2020 18:21:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f849b186f8a4becc5bdc610" data-wf-site="5e30eecf2c9656b33936eb65">
 <head>
   <meta charset="utf-8">
@@ -33,23 +33,18 @@
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
   <script data-ad-client="ca-pub-9165674550154218" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!--  Facebook Pixel Code  -->
+  <!--  Global site tag (gtag.js) - Google Ads: 616202061  -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-616202061"></script>
   <script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window,document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
- fbq('init', '154907775729568'); 
-fbq('track', 'PageView');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-616202061');
 </script>
-  <noscript>
- <img height="1" width="1" src="https://www.facebook.com/tr?id=154907775729568&ev=PageView&noscript=1">
-</noscript>
-  <!--  End Facebook Pixel Code  -->
+  <!--  Event snippet for Website lead conversion page  -->
+  <script>
+  gtag('event', 'conversion', {'send_to': 'AW-616202061/V-NdCP2jxuIBEM3-6aUC'});
+</script>
 </head>
 <body class="body">
   <div class="hero">
