Adding donate link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="text-block">Our Campaigns</div>
               </div>
               <nav class="dropdown-list w-dropdown-list"><a href="campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="campaigns/mental-health.html" class="dropdown-link w-dropdown-link">Mental Health</a><a href="campaigns/brand-ambassadors.html" class="dropdown-link w-dropdown-link">Brand Ambassadors</a></nav>
-            </div><a href="donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
+            </div><a href="https://donate.bcyouthcouncil.ca/" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
           </div>
@@ -84,7 +84,7 @@
   <div class="section center">
     <div data-w-id="6b220cb1-4b9c-7fb0-75b9-53ff4a6c35a2" class="hero-content-home">
       <h1 class="heading-3">BC Youth Council</h1>
-      <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="donate.html" class="buttondonate w-button">Donate (coming soon)</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
+      <h3 class="hero-subhead">Empower. Project. Create.</h3><a href="https://donate.bcyouthcouncil.ca/" class="buttondonate w-button">Donate</a><a href="https://eepurl.com/g5ASgn" target="_blank" class="signupbutton w-button">Sign up for our email list</a></div>
   </div>
   <div id="about" class="section wide img">
     <div data-w-id="b126983d-9126-fc06-c81d-1318685e2add" class="wrap">
