--- a/campaigns/mental-health.html
+++ b/campaigns/mental-health.html
@@ -79,7 +79,7 @@ fbq('track', 'PageView');
                 <div class="text-block">Our Campaigns</div>
               </div>
               <nav class="dropdown-list w-dropdown-list"><a href="../campaigns/student-reps.html" class="dropdown-link w-dropdown-link">Student Reps</a><a href="../campaigns/environment.html" class="dropdown-link w-dropdown-link">Environment</a><a href="../campaigns/mental-health.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Mental Health</a><a href="../campaigns/brand-ambassadors.html" class="dropdown-link w-dropdown-link">Brand Ambassadors</a></nav>
-            </div><a href="../donate.html" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
+            </div><a href="../https://donate.bcyouthcouncil.ca/" target="_blank" class="nav-link w-nav-link">Donate</a><a href="https://blog.bcyouthcouncil.ca" target="_blank" class="nav-link w-nav-link">Blog</a><a href="https://bcyouthcouncil.typeform.com/to/knkHje" target="_blank" class="nav-link w-nav-link">Contact Us</a></nav>
           <div class="menu-button w-nav-button">
             <div class="menu-icon w-icon-nav-menu"></div>
           </div>
